fix alignment

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1023,7 +1023,7 @@ table th {
     border-bottom: 1px solid #ddd;
     display: block;
     font-size: .8em;
-    text-align: right;
+    text-align: left;
   }
   
   table td::before {
@@ -1032,7 +1032,7 @@ table th {
     content: attr(aria-label);
     */
     content: attr(data-label);
-    float: left;
+    float: right;
     font-weight: bold;
     text-transform: uppercase;
   }
